--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,8 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@azure/arm-machinelearning": "^2.1.1",
+    "@azure/identity": "^3.1.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^10.0.2",
