--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "index.js",
   "dependencies": {
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
-    "mongodb": "^5.2.0"
+    "mongodb": "^5.2.0",
+    "node-fetch": "^3.3.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
